# RoadBlock

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pipeline.py  pyproject.toml  requirements.txt  test_vt_debug.py
.kiro/: README.md
.kiro/agents/: README.md  builder-prompt.md  builder.json  critic.md  design-system-architect.md  documenter-prompt.md  documenter.json  reviewer-prompt.md  reviewer.json  team-lead-prompt.md  team-lead.json  validator-prompt.md  validator.json
.kiro/hooks/: agentic-team.kiro.hook  audit-prompts.json  audit-prompts.kiro.hook  auto-commit-changes.json  auto-commit-changes.kiro.hook  aws-schema-drift-validator.json  (+16 more)
components/: email_ingestion.py  imap_client.py  ioc_lookup_mcp.py  notification_module.py  persona_engine.py  safety_filter.py  scam_classifier.py  smtp_client.py  stalling_tracker.py  threat_parser.py  virustotal_mcp.py
dashboard/: soc_dashboard.py  styles.py
models/: __init__.py  aws_models.py  chat_models.py  email_models.py  ioc_models.py  lookup_models.py
pages/: 1_💬_Manual_Chat.py  2_📧_Email_Ingestion.py
tests/: conftest.py  test_adversarial_attacks.py  test_deepeval_persona.py  test_email_ingestion.py  test_email_models.py  test_email_pipeline_integration.py  test_fix_default_response_send.py  test_imap_client.py  test_mcp_lookup.py  test_models.py  test_notification_module.py  test_persona_engine.py  test_persona_properties.py  test_safety_filter.py  test_scam_classifier.py  test_smtp_client.py  test_soc_dashboard.py  test_soc_dashboard_email.py  test_stalling.py  test_threat_parser.py
(+30 files in other folders)
